test: migrate tests to JUnit Jupiter
Co-authored-by: strangelookingnerd <49242855+strangelookingnerd@users.noreply.github.com>